style.css
@font-face {
  font-family: 'Space Grotesk';
  src: url('/fonts/SpaceGrotesk-VariableFont_wght.ttf') format('woff2');
  font-weight: <weight>;
  font-optical-sizing: auto;
}


body {
  --flow-space: clamp(0.5em, 0.5em + 1vw, 1em);

  --clr-bg: #f6f1ee;
  --clr-fg: #182024;
  --clr-secondary-dark: #044488;
  --clr-secondary-bright: #0482cb;
  --clr-secondary-light: #71bfe9;
  --clr-tertiary-bright: #7f9b47;
  --clr-quatrenary-dark: #9e3f4e;
  --clr-quatrenary-light: #FFC9B9;
  --clr-quinary-bright: #dcb338;

  --link-color: var(--clr-secondary-dark);
  --link-decoration-color: var(--clr-secondary-bright);
  --link-border-width: 2px;
  --link-border-color: transparent;
  --link-hover-color: var(--clr-secondary-bright);
  --link-hover-border-color: var(--clr-secondary-light);
  --ease: linear(0,
      0.008 1.1%,
      0.031 2.2%,
      0.129 4.8%,
      0.257 7.2%,
      0.671 14.2%,
      0.789 16.5%,
      0.881 18.6%,
      0.957 20.7%,
      1.019 22.9%,
      1.063 25.1%,
      1.094 27.4%,
      1.114 30.7%,
      1.112 34.5%,
      1.018 49.9%,
      0.99 59.1%,
      1);

  --font-body: 'Inter', sans-serif;
  --font-heading: 'Space Grotesk', serif;

  /* https://codepen.io/miriamsuzanne/pen/QwEXomP */
  --size--medium: clamp(1em, 22px + 1vi, 1.25em);

  --scale: 1.19;
  /* create the typographic scale! */
  --xx-small: calc(var(--size--medium) * pow(var(--scale), -1));
  --x-small: calc(var(--size--medium) * pow(var(--scale), -.5));
  --small: calc(var(--size--medium) * pow(var(--scale), -.25));
  --large: calc(var(--size--medium) * pow(var(--scale), 1));
  --x-large: calc(var(--size--medium) * pow(var(--scale), 2));
  --xx-large: calc(var(--size--medium) * pow(var(--scale), 3));
  --xxx-large: calc(var(--size--medium) * pow(var(--scale), 4));
  --xxxx-large: calc(var(--size--medium) * pow(var(--scale), 5));
  --xxxxx-large: calc(var(--size--medium) * pow(var(--scale), 6));
  --xxxxxx-large: calc(var(--size--medium) * pow(var(--scale), 7));

  font-family: var(--font-body);
  font-size: var(--small);
  line-height: 1.5;

  background-color: var(--clr-bg);
  color: var(--clr-fg);

}

.container {
  padding: 4vw 8vw;
  margin-inline: auto;
  max-width: 70ch;

  background-color: oklch(from var(--clr-bg) l c h / 0.6);

}

h1,
.site-title,
h2,
h3,
h4,
h5,
h6 {
  font-family: var(--font-heading);
  font-weight: 400;
  line-height: 1;
  margin:0;
}

h1, h1.site-title{
  font-size: var(--xxxxxx-large);
}
h2 {
  font-size: var(--xxxxx-large);
}
h3 {
  font-size: var(--xxxx-large);
}
h4 {
  font-size: var(--xxx-large);
}
h5 {
  font-size: var(--xx-large);
}
h6 {
  font-size: var(--x-large);
}
.site-title {
  font-size: var(--small);
}
.site-title a {
  font-weight:normal;
}
a {
  position: relative;
  color: var(--link-color);
  text-decoration-style: dotted;
  text-decoration-thickness: 2px;
  text-decoration-color: (--link-color);
  border: var(--link-border-width) dotted var(--link-border-color);
  padding: var(--link-border-width);
  transition: all 0.2s var(--ease);
}
/* .flow a::before {
  content: '';
  background: var(--link-hover-border-color);
  position: absolute;
  z-index: -1;
  top:0;left:0;
  width: 100%; height: 100%;
  opacity: 0;
}
a:hover::before {
    animation: linkbackground .15s ease-out;
}
@keyframes linkbackground {
  0% {scale:0}
  50% {scale:1; opacity: 1;}
  60% {opacity: 1;}
  100% {scale: 1.1;opacity: 0;}  
} */

p a, ul a, ol a {
  font-weight: bolder;
}
a:hover,
a:visited:hover,
a:focus {
  color: var(--link-hover-color);
  border-color: var(--link-hover-border-color);
}
a:visited {
  --link-color: var(--clr-secondary-bright);
}

/* https://piccalil.li/blog/flow-utility/ */
.flow > * + * {
  margin-top: var(--flow-space, 1rem);
}

.little-to-no-spacing,
.coursework {
  --flow-space: calc(0.1rem + 1vw);
}
.coursework {
  font-size: 0.8em;
}
header,
footer,
#mainContent {
  padding: calc(0.5vh + 0.5vw) 0;
}
p {
  margin: 1rem 0;
  line-height: 1.9;
}
footer {
  font-size: 0.8em;
  margin: 0;
  text-align: right;
}
h2.welcome-intro {
  font-size: 1.1rem;
  text-align: left;
  margin: 1.2em 0 0.2em 0;
  line-height: 1;
}
.welcome {
  font-size: clamp(1.4em, calc(4vw), 2.2em);
}
.intro {
  font-size: clamp(1.2em, calc(3.2vw), 2em);
}
.name {
  font-size: clamp(2rem, calc(5vw), 3.6em);
  letter-spacing: 0.01em;
}
#mainHeader {
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  align-items: baseline;
  flex-wrap: wrap;

  gap: 0.75em;

  margin-block-end: 2em;;
}
#mainNav {
  width: 100%;
}
#mainNav ul {
  margin:0;
  padding:0;
  list-style: none;
  display: flex;
  justify-content: flex-end;
  font-size: var(--xx-small);
}
#mainNav ul li {
  padding: 0 0.5em;
}
.current-page {
  font-style: italic;
}

iframe {
  max-width: 100%;
}

